--- a/src/style.css
+++ b/src/style.css
@@ -135,28 +135,24 @@ body {
 }
 
 #content {
-  display: grid;
   height: 100vh;
-  grid-template-rows: 70px 1fr 30px;
   background: url(./cheese-plate-background.jpg);
   background-size: cover;
   background-position-x: center;
   background-position: center;
 }
 
-.header {
-  background-color: #fc954ca2;
-  position: sticky;
-}
-
 .nav {
   width: 100vw;
-  height: 100%;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-around;
   text-transform: uppercase;
   font-weight: 800;
+  background-color: rgba(252, 149, 76, 0.7);
+  position: fixed;
+  color: white;
 }
 
 .nav-ul {
@@ -165,6 +161,12 @@ body {
 
 .nav-ul li {
   margin-left: 80px;
+  transition: 0.4sec all ease-in-out;
+  cursor: pointer;
+}
+
+.nav-ul li:hover {
+  color: #ffeccf;
 }
 
 #header-logo {
@@ -177,6 +179,35 @@ body {
   text-align: center;
 }
 
+#welcome-section {
+  height: 100vh;
+  display: grid;
+  place-content: center;
+}
+
+h1 {
+  font-size: 4rem;
+  color: white;
+  font-family: "Dancing Script", cursive;
+  text-align: center;
+  color: #ffeccf;
+}
+
+h1 span {
+  font-family: "Chau Philomene One", sans-serif;
+  text-transform: uppercase;
+  color: white;
+}
+
 .footer {
-  background-color: green;
+  height: 30px;
+  background-color: #31572c;
+  display: flex;
+  align-items: center;
+}
+
+.footer p {
+  margin-left: 20px;
+  font-size: 0.5rem;
+  color: #1a2f17;
 }
